--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -107,7 +107,7 @@
             name: data.user.name
         }));
                     // Redirigir al index
-                    window.location.href = 'index.html';
+                    window.location.href = 'event-selection.html';
                 } else {
                     const errorData = await response.json();
                     document.getElementById('errorMessage').textContent = 
