--- a/FrontEnd/stats.html
+++ b/FrontEnd/stats.html
@@ -87,10 +87,7 @@
         <div class="container">
             <div class="d-flex align-items-center">
                 <a class="navbar-brand" href="#">Estadísticas</a>
-                <span class="current-event-badge" id="currentEventName">Evento</span>
-                <a href="event-selection.html" class="event-selector-link ms-2">
-                    <i class="bi bi-arrow-left-circle"></i> Cambiar evento
-                </a>
+                <span class="" id="currentEventName"></span>
             </div>
         
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -599,10 +596,13 @@
 
         // Función para cerrar sesión
         function logout() {
-            localStorage.removeItem('authToken');
-            localStorage.removeItem('userData');
-            localStorage.removeItem('currentEventId');
-            localStorage.removeItem('currentEventName');
+        localStorage.removeItem('authToken');
+        localStorage.removeItem('userData');
+        localStorage.removeItem('currentEventId');
+        localStorage.removeItem('currentEventName');
+        localStorage.removeItem('eventCodes');
+        localStorage.removeItem('currentEventAccess');
+        localStorage.removeItem('isGlobalAdmin');
             window.location.href = 'login.html';
         }
         
