--- a/FrontEnd/Index.html
+++ b/FrontEnd/Index.html
@@ -197,7 +197,12 @@
         </div>
     </nav>
     <div id="loadingIndicator">Cargando...</div>
-<div class="container my-5">
+    <div>
+    <a href="admin-panel.html" class="btn btn-primary mt-3" id="adminSection" style="display: none;">
+        <i class="bi bi-shield-check me-2"></i>Panel de Administración
+    </a>
+    </div>
+    <div class="container my-5">
     <!-- Lista de Invitados -->
     <div class="container-fluid my-5">
         <div id="invitadosList" class="my-4">
