--- a/FrontEnd/event-selection.html
+++ b/FrontEnd/event-selection.html
@@ -227,7 +227,7 @@
 
 <script>
     // Constante para la URL base de la API
-    const apiBaseUrl = "https://choosing-rafa.duckdns.org/api";
+    const apiBaseUrl = "https://rafa-choosing.duckdns.org/api";
     
     // Variable para almacenar información del usuario
     let userData = null;
