--- a/FrontEnd/stats.html
+++ b/FrontEnd/stats.html
@@ -236,8 +236,8 @@
         let statusPieChart, hourlyBarChart, dayAttendanceChart, newRegistrationsChart;
         let eventData = null; // Para almacenar la configuración del evento actual
         
-        const apiUrl = "https://choosing-rafa.duckdns.org/api/List";
-        const eventApiUrl = "https://choosing-rafa.duckdns.org/api/Event";
+        const apiUrl = "https://rafa-choosing.duckdns.org/api/List";
+        const eventApiUrl = "https://rafa-choosing.duckdns.org/api/Event";
 
         // Verificar token y evento seleccionado al cargar la página
         document.addEventListener('DOMContentLoaded', function() {
