--- a/FrontEnd/admin-panel.html
+++ b/FrontEnd/admin-panel.html
@@ -579,7 +579,7 @@
     
     <script>
         // Constantes
-        const apiBaseUrl = "https://choosing-rafa.duckdns.org/api";
+        const apiBaseUrl = "https://rafa-choosing.duckdns.org/api";
         let eventsDataTable, usersDataTable;
 
         // Funciones de utilidad
