--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -87,7 +87,7 @@
             }
             
             try {
-                const response = await fetch('https://choosing-rafa.duckdns.org/api/auth/login', {
+                const response = await fetch('https://rafa-choosing.duckdns.org/api/auth/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
