--- a/FrontEnd/Index.html
+++ b/FrontEnd/Index.html
@@ -449,6 +449,9 @@
                 <div id="scanResult" class="mt-4" style="display: none;">
                     <!-- Aquí se mostrará la info del invitado -->
                 </div>
+                <div class="d-grid gap-2 mt-3">
+                  <button type="button" class="btn btn-secondary" onclick="resetScan()">Escanear nueva persona</button>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
