--- a/FrontEnd/Index.html
+++ b/FrontEnd/Index.html
@@ -427,19 +427,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="scanModalLabel">
-                    <i class="bi bi-upc-scan me-2"></i>Modo Escaneo Activo
+                    <i class="bi bi-upc-scan me-2"></i>Escanear
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body text-center">
-                <div class="mb-4">
-                    <div class="spinner-border text-primary" role="status" id="scanSpinner">
-                        <span class="visually-hidden">Esperando escaneo...</span>
-                    </div>
-                    <h4 class="mt-3">Esperando escaneo...</h4>
-                    <p class="text-muted">Escanee un código QR o DNI con la lectora</p>
-                </div>
-                
                 <!-- Campo oculto que recibe el input de la lectora -->
                 <input type="text" id="scanInput" class="form-control" 
                        placeholder="Los datos del escaneo aparecerán aquí..." 
@@ -450,11 +442,10 @@
                     <!-- Aquí se mostrará la info del invitado -->
                 </div>
                 <div class="d-grid gap-2 mt-3">
-                  <button type="button" class="btn btn-secondary" onclick="resetScan()">Escanear nueva persona</button>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-secondary" onclick="resetScan()">Escanear nueva persona</button>
             </div>
         </div>
     </div>
