--- a/FrontEnd/event-selection.html
+++ b/FrontEnd/event-selection.html
@@ -217,6 +217,9 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3 mt-5">
         <p>&copy; 2025 - Acreditación de Eventos</p>
+        <a href="acreditacion-offline.html" class="btn btn-warning">
+    <i class="bi bi-hdd me-2"></i>Sistema Local
+</a>
     </footer>
 
     <!-- jQuery -->
