--- a/FrontEnd/Index.html
+++ b/FrontEnd/Index.html
@@ -278,6 +278,10 @@
                             <label for="newGuestTelefono" class="form-label">Teléfono</label>
                             <input type="tel" class="form-control" id="newGuestTelefono">
                         </div>
+                        <div class="mb-3" id="newGuestRedSocialGroup">
+                            <label for="newGuestRedSocial" class="form-label">Red Social</label>
+                            <input type="text" class="form-control" id="newGuestRedSocial" placeholder="@usuario o enlace">
+                        </div>
                         
                         <!-- Días de asistencia (opcional según configuración) -->
                         <div class="mb-3" id="newGuestDiasGroup">
@@ -397,6 +401,11 @@
                         <div class="mb-3" id="editGuestTelefonoGroup">
                             <label for="editGuestTelefono" class="form-label">Teléfono</label>
                             <input type="tel" class="form-control" id="editGuestTelefono">
+                        </div>
+
+                        <div class="mb-3" id="editGuestRedSocialGroup">
+                            <label for="editGuestRedSocial" class="form-label">Red Social</label>
+                            <input type="text" class="form-control" id="editGuestRedSocial" placeholder="@usuario o enlace">
                         </div>    
 
                         <!-- Estado de acreditación -->
