--- a/FrontEnd/event-selection.html
+++ b/FrontEnd/event-selection.html
@@ -220,6 +220,9 @@
         <a href="acreditacion-offline.html" class="btn btn-warning">
     <i class="bi bi-hdd me-2"></i>Sistema Local
 </a>
+        <a href="offline.html" class="btn btn-warning">
+    <i class="bi bi-hdd me-2"></i>Sistema offline
+</a>
     </footer>
 
     <!-- jQuery -->
