--- a/FrontEnd/Index.html
+++ b/FrontEnd/Index.html
@@ -310,6 +310,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                     <button type="button" class="btn btn-primary" onclick="saveNewGuest()">Guardar</button>
+                    <button type="button" class="btn btn-primary" onclick="saveNewGuest()">Guardar e Imprimir</button>
                 </div>
             </div>
         </div>
