updated api direction

--- a/FrontEnd/admin-panel.html
+++ b/FrontEnd/admin-panel.html
@@ -583,7 +583,7 @@
     
     <script>
         // Constantes
-        const apiBaseUrl = "https://rafa-choosing.duckdns.org/api";
+        const apiBaseUrl = "https://api.rafarearte.com/api";
         let eventsDataTable, usersDataTable;
 
         // Funciones de utilidad
