--- a/FrontEnd/event-selection.html
+++ b/FrontEnd/event-selection.html
@@ -233,7 +233,7 @@
 
 <script>
     // Constante para la URL base de la API
-    const apiBaseUrl = "https://rafa-choosing.duckdns.org/api";
+    const apiBaseUrl = "https://api.rafarearte.com/api";
     
     // Variable para almacenar información del usuario
     let userData = null;
