--- a/FrontEnd/registro-evento.html
+++ b/FrontEnd/registro-evento.html
@@ -229,7 +229,7 @@
     
     <script>
         // 🔥 USAR TUS APIs REALES
-        const apiBaseUrl = "https://rafa-choosing.duckdns.org/api";
+        const apiBaseUrl = "https://api.rafarearte.com/api";
         const eventApiUrl = `${apiBaseUrl}/Event`;
         const listApiUrl = `${apiBaseUrl}/List`;
         
