--- a/FrontEnd/stats.html
+++ b/FrontEnd/stats.html
@@ -235,9 +235,9 @@
         // Variable global para los gráficos
         let statusPieChart, hourlyBarChart, dayAttendanceChart, newRegistrationsChart;
         let eventData = null; // Para almacenar la configuración del evento actual
-        
-        const apiUrl = "https://rafa-choosing.duckdns.org/api/List";
-        const eventApiUrl = "https://rafa-choosing.duckdns.org/api/Event";
+
+        const apiUrl = "https://api.rafarearte.com/api/List";
+        const eventApiUrl = "https://api.rafarearte.com/api/Event";
 
         // Verificar token y evento seleccionado al cargar la página
         document.addEventListener('DOMContentLoaded', function() {
