--- a/FrontEnd/print-labels.html
+++ b/FrontEnd/print-labels.html
@@ -145,8 +145,8 @@
     
     <script>
         // URLs para las APIs
-        const apiUrl = "https://rafa-choosing.duckdns.org/api/List";
-        const eventApiUrl = "https://rafa-choosing.duckdns.org/api/Event";
+        const apiUrl = "https://api.rafarearte.com/api/List";
+        const eventApiUrl = "https://api.rafarearte.com/api/Event";
         
         // Variables globales
         let events = [];
