--- a/FrontEnd/Index.html
+++ b/FrontEnd/Index.html
@@ -424,6 +424,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger me-auto" onclick="deleteGuest()">Eliminar</button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-success" onclick="saveEditedGuestAndPrint()"><i class="bi bi-printer me-1"></i>Guardar e Imprimir</button>
                     <button type="button" class="btn btn-primary" onclick="saveEditedGuest()">Guardar Cambios</button>
                 </div>
             </div>
