divirdir script index

--- a/FrontEnd/Index.html
+++ b/FrontEnd/Index.html
@@ -590,12 +590,20 @@ html, body {
 <!-- ✅ CDN MÁS CONFIABLE -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
 
-<script src="js/core.js"></script>
-<script src="js/auth.js"></script>
-<script src="js/datatable.js"></script>
+
 <script src="js/actions.js"></script>
-<script src="js/offline.js"></script>
+<script src="js/core.js"></script>
+<script src="js/data.js"></script>
 <script src="js/main.js"></script>
+<script src="js/modals.js"></script>
+<script src="js/print.js"></script>
+<script src="js/table.js"></script>
+<script src="js/scanner.js"></script>
+
+<!--
+<script src="scriptindex.js"></script>
+-->
+
 
 <!-- LOADING SIMPLE - UN SOLO CARTEL AL MEDIO -->
 <div id="loadingOverlay" style="
