updated alerts y confirms

--- a/FrontEnd/Index.html
+++ b/FrontEnd/Index.html
@@ -591,6 +591,7 @@ html, body {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
 
 
+<script src="js/toasts.js"></script>
 <script src="js/core.js"></script>
 <script src="js/data.js"></script>
 <script src="js/table.js"></script>
@@ -683,6 +684,10 @@ html, body {
 }
 </style>
 
+<!-- ✅ Contenedor para Toasts/Notificaciones -->
+<div class="position-fixed top-0 end-0 p-3" style="z-index: 1100;">
+    <div id="toast-container"></div>
+</div>
 
 </body>
 
